<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EVManagement System</string>
    <string name="About">About</string>
    <string name="Home">Home</string>
    <string name="Logout">Logout</string>
    <string name="Login">Login</string>
    <string name="Rechargebooking">Recharge Booking</string>
    <string name="RechargeDate">Recharge Date</string>
    <string name="Map">Map</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="TypeOfCharging">Type Of Charging</string>
    <string name="InitialCharge">Initial Charge</string>
    <string name="DesiredCharge">Desired Charge</string>
    <string name="Proceed">Proceed</string>
    <string name="title_activity_charging_solution_first">ChargingSolutionFirstActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_resevation_booking">ResevationBookingActivity</string>
    <string name="title_activity_station_tracker_map">StationTrackerMapActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Otp">OTP</string>
    <string name="Welcome">Welcome to EV Management System</string>
    <string name="Register">Forgot Password ? Register User</string>
    <string name="SignIn">SignIn</string>
    <string name="Nsoft">Powered By NSOFT INDIA SERVICES PVT LTD</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>

</resources>