<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/green"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblWelcome"
            style="@style/SBWhiteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="25dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/Welcome" />

        <TextView
            android:id="@+id/lblSBBlinkText"
            style="@style/SBSmallLabel1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="center"
            android:text="Test Version:"
            android:textColor="@color/red" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/profilepic" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="225dp"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imgprofile"
                    android:layout_width="50dp"
                    android:layout_height="fill_parent"
                    android:src="@drawable/profile" />

                <EditText
                    android:id="@+id/txtUserName"
                    style="@style/SBTextBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="20"
                    android:hint="@string/Username"
                    android:maxLength="25"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imgpassword"
                    android:layout_width="50dp"
                    android:layout_height="fill_parent"
                    android:src="@drawable/pass" />

                <EditText
                    android:id="@+id/txtPassword"
                    style="@style/SBTextBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="20"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSignIn"
                style="@style/SBButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/SignIn" />

            <TextView
                android:id="@+id/txtRegister"
                style="@style/SBWhiteLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/Register"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblPoweredBy"
            style="@style/SBWhiteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/Nsoft"
            android:textSize="10dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>