<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/appcolor"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblRechargeBooking"
            style="@style/SBWhiteLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/Rechargebooking"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="0.8"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:filterTouchesWhenObscured="false"
            android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb"
            android:scrollbarTrackVertical="@drawable/scroller_virtical_track" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lblStation"
                    style="@style/SBSmallLabel1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Station" />

                <Spinner
                    android:id="@+id/ddlStation"
                    style="@style/SBSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

                <TextView
                    android:id="@+id/lblRechargeDate"
                    style="@style/SBSmallLabel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/RechargeDate" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/txtRechargeDate"
                        style="@style/SBTextBox"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="DD-MM-YYYY"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="14dp" />

                    <Button
                        android:id="@+id/btnMap"
                        style="@style/SBButton"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/Map" />
                </LinearLayout>

                <TextView
                    android:id="@+id/lblRechargetime"
                    style="@style/SBSmallLabel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Recharge Time Availability" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/lblfrom"
                        style="@style/SBSmallLabel1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/From" />

                    <TextView
                        android:id="@+id/lblTo"
                        style="@style/SBSmallLabel1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/To" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/ddlFrom"
                        style="@style/SBSpinner"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" />

                    <Spinner
                        android:id="@+id/ddlTo"
                        style="@style/SBSpinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:ems="10" />
                </LinearLayout>

                <TextView
                    android:id="@+id/lblTypeCharge"
                    style="@style/SBSmallLabel1"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/TypeOfCharging" />

                <Spinner
                    android:id="@+id/ddlTypeOfCharge"
                    style="@style/SBSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/lblInitialCharge"
                        style="@style/SBSmallLabel1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/InitialCharge" />

                    <TextView
                        android:id="@+id/lblDesiredCharge"
                        style="@style/SBSmallLabel1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/DesiredCharge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/ddlInitialCharge"
                        style="@style/SBSpinner"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ems="10" />

                    <Spinner
                        android:id="@+id/ddlDesiredCharge"
                        style="@style/SBSpinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:ems="10" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnProceed"
            style="@style/SBButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Proceed" />

        <!--
             <Button
            android:id="@+id/btnReset"
            style="@style/SBButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@color/red"
            android:text="Reset" />
        -->
    </LinearLayout>

</LinearLayout>